@@ -9,6 +9,7 @@
 	(PokerAvatarTestCase.autoBlindAnte): Wrote function.
 	(PokerAvatarTestCase.sitTable): Renamed function to seatTable.
 	(PokerAvatarTestCase.sitTable): Wrote a new function by this name.
+	(PokerAvatarTestCase.beginHandSetup): Wrote function.
 
 2008-02-13  Bradley M. Kuhn  <bkuhn@ebb.org>
 
